--- a/JICHANGEAPI/ClientApp/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -7,7 +7,7 @@
 
 <div class="w-full h-full relative">
   <img
-    src="../../../../../../ClientApp/src/assets/img/bg-1.jpg"
+    src="assets/img/bg-1.jpg"
     class="absolute z-0 object-cover w-full h-full"
     alt=""
     srcset=""
@@ -21,7 +21,7 @@
       class="bg-white grid place-items-center shadow-2 rounded-md space-y-0 p-4 w-11/12 lg:w-[30rem]"
       [formGroup]="formGroup"
     >
-      <img src="../../../../../../ClientApp/src/assets/img/logo.png" class="w-40" alt="" srcset="" />
+      <img src="assets/img/logo.png" class="w-40" alt="" srcset="" />
       <div class="w-full flex flex-col">
         <h6 class="text-center mat-headline-large">
           {{ t("welcomeMessage") }}
