--- a/JICHANGEAPI/ClientApp/src/app/pages/auth/sign-in/sign-in.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/auth/sign-in/sign-in.component.html
@@ -20,7 +20,7 @@
         action=""
       >
         <img
-          src="../../../../../../ClientApp/src/assets/img/logo.png"
+          src="assets/img/logo.png"
           class="w-40"
           alt=""
           srcset=""
@@ -151,7 +151,7 @@
     </div>
     <div class="basis-full hidden lg:block">
       <img
-        src="../../../../../../ClientApp/src/assets/img/bg-1.jpg"
+        src="assets/img/bg-1.jpg"
         class="object-cover w-full h-full"
         alt=""
         srcset=""
