--- a/JICHANGEAPI/ClientApp/src/app/pages/auth/otp-page/otp-page.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/auth/otp-page/otp-page.component.html
@@ -6,7 +6,7 @@
 
 <div class="w-full h-full relative">
   <img
-    src="../../../../../../ClientApp/src/assets/img/bg-1.jpg"
+    src="assets/img/bg-1.jpg"
     class="absolute z-0 object-cover w-full h-full"
     alt=""
     srcset=""
@@ -18,7 +18,7 @@
       class="bg-white grid place-items-center px-8 py-8 shadow-2 rounded-md space-y-0 w-11/12 lg:w-[30rem]"
       [formGroup]="formGroup"
     >
-      <img src="../../../../../../ClientApp/src/assets/img/logo.png" class="w-40" alt="" srcset="" />
+      <img src="assets/img/logo.png" class="w-40" alt="" srcset="" />
       <div class="w-full flex flex-col">
         <h6 class="text-center text-xl">
           {{ t("verifyAccount") }}
