--- a/JICHANGEAPI/ClientApp/src/app/pages/bank/company/inbox-approval/inbox-approval.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/bank/company/inbox-approval/inbox-approval.component.html
@@ -23,7 +23,7 @@
         >
           <p class="text-xs">{{ t("exportToExcel") }}</p>
           <span>
-            <i class="bi bi-file-earmark-spreadsheet"></i>
+            <mat-icon matPrefix>description</mat-icon>
           </span>
         </button>
         <button
@@ -33,7 +33,7 @@
         >
           <p class="text-xs lg:block hidden">{{ t("exportToPdf") }}</p>
           <span>
-            <i class="bi bi-filetype-pdf"></i>
+            <mat-icon matPrefix>picture_as_pdf</mat-icon>
           </span>
         </button>
       </div>
@@ -42,14 +42,11 @@
           <button
             tabindex="0"
             role="button"
-            class="btn btn-sm tracking-wide bg-white shadow rounded-lg m-1"
+            class="btn btn-sm tracking-wide bg-white shadow rounded-lg m-1 flex flex-row items-center"
           >
             <span>
-              <i class="bi bi-layout-three-columns text-sm"></i>
+              <mat-icon class="text-lg mb-0.5" matPrefix>table_chart</mat-icon>
             </span>
-            <p *transloco="let t; read: 'defaults'" class="text-xs">
-              {{ t("columns") }}
-            </p>
           </button>
           <ul
             tabindex="0"
@@ -79,7 +76,7 @@
             [formControl]="tableSearch"
           />
           <span class="absolute top-1/2 left-2 -translate-y-1/2">
-            <i class="bi bi-search text-lg text-neutral-500"></i>
+            <mat-icon class="mt-1" matPrefix>search</mat-icon>
           </span>
         </div>
       </div>
