--- a/JICHANGEAPI/ClientApp/src/app/components/dialogs/bank/reports/report-form-details/report-form-details.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/components/dialogs/bank/reports/report-form-details/report-form-details.component.html
@@ -189,12 +189,23 @@
     </div>
   </div>
   <div class="col-span-full flex flex-row items-center justify-end">
-    <button
+    <!-- <button
       (click)="submitForm()"
       *transloco="let t; read: 'actions'"
       class="flex flex-row items-center btn btn-sm bg-primary hover:bg-accent text-neutral-50 btn-ghost shadow"
     >
       {{ t("submit") }}
+    </button> -->
+    <button
+      (click)="submitForm()"
+      class="flex flex-row items-center justify-center btn btn-sm bg-primary hover:bg-accent text-neutral-50 btn-ghost shadow"
+    >
+      <p *transloco="let t; read: 'actions'" class="text-sm">
+        {{ t("submit") }}
+      </p>
+      <span>
+        <mat-icon class="" matPrefix>filter_alt</mat-icon>
+      </span>
     </button>
   </div>
 </form>
