--- a/JICHANGEAPI/ClientApp/src/app/components/layouts/main/main.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/components/layouts/main/main.component.html
@@ -28,7 +28,8 @@
         <xng-breadcrumb [separator]="iconTemplate"></xng-breadcrumb>
         <ng-template #iconTemplate>
           <span>
-            <i class="bi bi-chevron-right"></i>
+            <!-- <i class="bi bi-chevron-right"></i> -->
+            <mat-icon class="mt-2">chevron_right</mat-icon>
           </span>
         </ng-template>
       </div>
