--- a/JICHANGEAPI/ClientApp/src/app/pages/bank/reports/cancelled-invoice-report/cancelled-invoice-report.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/bank/reports/cancelled-invoice-report/cancelled-invoice-report.component.html
@@ -31,7 +31,7 @@
           >
             <p class="text-xs lg:block hidden">{{ t("exportToExcel") }}</p>
             <span>
-              <i class="bi bi-file-earmark-spreadsheet"></i>
+              <mat-icon matPrefix>description</mat-icon>
             </span>
           </button>
           <button
@@ -41,7 +41,7 @@
           >
             <p class="text-xs lg:block hidden">{{ t("exportToPdf") }}</p>
             <span>
-              <i class="bi bi-filetype-pdf"></i>
+              <mat-icon matPrefix>picture_as_pdf</mat-icon>
             </span>
           </button>
         </div>
@@ -50,14 +50,13 @@
             <button
               tabindex="0"
               role="button"
-              class="btn btn-sm tracking-wide bg-white shadow rounded-lg m-1"
+              class="btn btn-sm tracking-wide bg-white shadow rounded-lg m-1 flex flex-row items-center"
             >
               <span>
-                <i class="bi bi-layout-three-columns text-sm"></i>
+                <mat-icon class="text-lg mb-0.5" matPrefix
+                  >table_chart</mat-icon
+                >
               </span>
-              <p *transloco="let t; read: 'defaults'" class="text-xs">
-                {{ t("columns") }}
-              </p>
             </button>
             <ul
               tabindex="0"
