--- a/JICHANGEAPI/ClientApp/src/app/pages/bank/reports/payment-details/payment-details.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/bank/reports/payment-details/payment-details.component.html
@@ -28,7 +28,7 @@
     <div [formGroup]="tableFormGroup" class="flex flex-col px-2 py-4">
       <div class="flex flex-row items-center justify-between">
         <div class="flex flex-row items-center space-x-4">
-          <button
+          <!-- <button
             (click)="downloadSheet()"
             *transloco="let t; read: 'reports.overview'"
             class="flex flex-row items-center btn btn-sm text-xs text-white bg-green-600 hover:bg-green-600 hover:text-green-950"
@@ -47,6 +47,26 @@
             <span>
               <i class="bi bi-filetype-pdf"></i>
             </span>
+          </button> -->
+          <button
+            (click)="downloadSheet()"
+            *transloco="let t; read: 'reports.overview'"
+            class="flex flex-row items-center btn btn-sm text-xs text-white bg-green-600 hover:bg-green-600 hover:text-green-950"
+          >
+            <p class="text-xs lg:block hidden">{{ t("exportToExcel") }}</p>
+            <span>
+              <mat-icon matPrefix>description</mat-icon>
+            </span>
+          </button>
+          <button
+            (click)="downloadPdf()"
+            *transloco="let t; read: 'reports.overview'"
+            class="flex flex-row items-center btn btn-sm text-xs text-white bg-red-600 hover:bg-danger-600 hover:text-red-950"
+          >
+            <p class="text-xs lg:block hidden">{{ t("exportToPdf") }}</p>
+            <span>
+              <mat-icon matPrefix>picture_as_pdf</mat-icon>
+            </span>
           </button>
         </div>
         <div class="flex flex-row items-center space-x-2">
@@ -54,14 +74,13 @@
             <button
               tabindex="0"
               role="button"
-              class="btn btn-sm tracking-wide bg-white shadow rounded-lg m-1"
+              class="btn btn-sm tracking-wide bg-white shadow rounded-lg m-1 flex flex-row items-center"
             >
               <span>
-                <i class="bi bi-layout-three-columns text-sm"></i>
+                <mat-icon class="text-lg mb-0.5" matPrefix
+                  >table_chart</mat-icon
+                >
               </span>
-              <p *transloco="let t; read: 'defaults'" class="text-xs">
-                {{ t("columns") }}
-              </p>
             </button>
             <ul
               tabindex="0"
@@ -93,7 +112,7 @@
               [formControl]="tableSearch"
             />
             <span class="absolute top-1/2 left-2 -translate-y-1/2">
-              <i class="bi bi-search text-lg text-neutral-500"></i>
+              <mat-icon class="mt-1" matPrefix>search</mat-icon>
             </span>
           </div>
         </div>
