--- a/JICHANGEAPI/ClientApp/src/app/pages/bank/reports/transaction-details/list/transaction-details.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/bank/reports/transaction-details/list/transaction-details.component.html
@@ -23,15 +23,18 @@
     </ng-container>
     <div [formGroup]="headersFormGroup" class="flex flex-col px-2 py-4">
       <div class="flex flex-row items-center justify-between">
-        <div class="flex flex-row items-center space-x-4">
-          <button
+        <div
+          class="flex flex-row items-center space-x-4"
+          *transloco="let t; read: 'reports.overview'"
+        >
+          <!-- <button
             (click)="downloadSheet()"
             *transloco="let t; read: 'reports.overview'"
             class="flex flex-row items-center btn btn-sm text-xs text-white bg-green-800 hover:bg-green-800 hover:border-black hover:border-2"
           >
             <p class="text-xs lg:block hidden">{{ t("exportToExcel") }}</p>
             <span>
-              <i class="bi bi-file-earmark-spreadsheet"></i>
+              <mat-icon matPrefix>description</mat-icon>
             </span>
           </button>
           <button
@@ -41,7 +44,27 @@
           >
             <p class="text-xs lg:block hidden">{{ t("exportToPdf") }}</p>
             <span>
-              <i class="bi bi-filetype-pdf"></i>
+              <mat-icon matPrefix>picture_as_pdf</mat-icon>
+            </span>
+          </button> -->
+          <button
+            (click)="downloadSheet()"
+            *transloco="let t; read: 'reports.overview'"
+            class="flex flex-row items-center btn btn-sm text-xs text-white bg-green-600 hover:bg-green-600 hover:text-green-950"
+          >
+            <p class="text-xs lg:block hidden">{{ t("exportToExcel") }}</p>
+            <span>
+              <mat-icon matPrefix>description</mat-icon>
+            </span>
+          </button>
+          <button
+            (click)="downloadPdf()"
+            *transloco="let t; read: 'reports.overview'"
+            class="flex flex-row items-center btn btn-sm text-xs text-white bg-red-600 hover:bg-danger-600 hover:text-red-950"
+          >
+            <p class="text-xs lg:block hidden">{{ t("exportToPdf") }}</p>
+            <span>
+              <mat-icon matPrefix>picture_as_pdf</mat-icon>
             </span>
           </button>
         </div>
@@ -50,14 +73,13 @@
             <button
               tabindex="0"
               role="button"
-              class="btn btn-sm tracking-wide bg-white shadow rounded-lg m-1"
+              class="btn btn-sm tracking-wide bg-white shadow rounded-lg m-1 flex flex-row items-center"
             >
               <span>
-                <i class="bi bi-layout-three-columns text-sm"></i>
+                <mat-icon class="text-lg mb-0.5" matPrefix
+                  >table_chart</mat-icon
+                >
               </span>
-              <p *transloco="let t; read: 'defaults'" class="text-xs">
-                {{ t("columns") }}
-              </p>
             </button>
             <ul
               tabindex="0"
@@ -90,7 +112,7 @@
               [formControl]="tableSearch"
             />
             <span class="absolute top-1/2 left-2 -translate-y-1/2">
-              <i class="bi bi-search text-lg text-neutral-500"></i>
+              <mat-icon class="mt-1" matPrefix>search</mat-icon>
             </span>
           </div>
         </div>
@@ -145,7 +167,9 @@
                         [attr.data-tip]="t('view')"
                       >
                         <span>
-                          <i class="bi bi-eye text-lg text-warning"></i>
+                          <mat-icon class="text-warning" matPrefix
+                            >visibility</mat-icon
+                          >
                         </span>
                       </button>
                     </div>
@@ -242,7 +266,9 @@
                           [attr.data-tip]="t('view')"
                         >
                           <span>
-                            <i class="bi bi-eye text-lg text-warning"></i>
+                            <mat-icon class="text-warning" matPrefix
+                              >visibility</mat-icon
+                            >
                           </span>
                         </button>
                       </div>
