--- a/JICHANGEAPI/ClientApp/src/app/pages/bank/setup/country-list/country-list.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/bank/setup/country-list/country-list.component.html
@@ -13,7 +13,7 @@
     >
       {{ t("country") }}
     </h2>
-    <button
+    <!-- <button
       (click)="openAddCountryDialog()"
       class="flex flex-row items-center btn btn-sm bg-primary hover:bg-accent text-neutral-50 btn-ghost shadow"
     >
@@ -23,7 +23,15 @@
       <p *transloco="let t; read: 'setup.countryDialog'" class="text-sm">
         {{ t("addCountry") }}
       </p>
-    </button>
+    </button> -->
+    <ng-container *transloco="let t; read: 'setup.countryDialog'">
+      <app-add-item-button
+        [title]="t('addCountry')"
+        [icon]="'add'"
+        (buttonCliked)="openAddCountryDialog()"
+      >
+      </app-add-item-button>
+    </ng-container>
   </div>
   <div
     [formGroup]="countryForm"
@@ -41,7 +49,7 @@
             [formControl]="tableSearch"
           />
           <span class="absolute top-1/2 left-2 -translate-y-1/2">
-            <i class="bi bi-search text-neutral-500"></i>
+            <mat-icon matPrefix class="mt-1">search</mat-icon>
           </span>
         </div>
       </div>
@@ -97,7 +105,7 @@
                       matTooltip="{{ t('edit') }}"
                     >
                       <span>
-                        <i class="bi bi-pen text-lg text-info"></i>
+                        <mat-icon matPrefix class="text-info">edit</mat-icon>
                       </span>
                     </button>
                     <button
@@ -107,7 +115,9 @@
                       matTooltip="{{ t('delete') }}"
                     >
                       <span>
-                        <i class="bi bi-trash text-lg text-danger-600"></i>
+                        <mat-icon matPrefix class="text-danger-600"
+                          >delete</mat-icon
+                        >
                       </span>
                     </button>
                   </div>
@@ -206,7 +216,7 @@
                         matTooltip="{{ t('edit') }}"
                       >
                         <span>
-                          <i class="bi bi-pen text-lg text-info"></i>
+                          <mat-icon matPrefix class="text-info">edit</mat-icon>
                         </span>
                       </button>
                       <button
@@ -216,7 +226,9 @@
                         matTooltip="{{ t('delete') }}"
                       >
                         <span>
-                          <i class="bi bi-trash text-lg text-danger-600"></i>
+                          <mat-icon matPrefix class="text-danger-600"
+                            >delete</mat-icon
+                          >
                         </span>
                       </button>
                     </div>
