--- a/JICHANGEAPI/ClientApp/src/app/pages/bank/setup/currency-list/currency-list.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/bank/setup/currency-list/currency-list.component.html
@@ -12,7 +12,7 @@
     >
       {{ t("currency") }}
     </h2>
-    <button
+    <!-- <button
       (click)="openCurrencyForm()"
       class="flex flex-row items-center btn btn-sm bg-primary hover:bg-accent text-neutral-50 btn-ghost shadow"
     >
@@ -22,7 +22,15 @@
       <p *transloco="let t; read: 'setup.currency'" class="text-sm">
         {{ t("addCurrency") }}
       </p>
-    </button>
+    </button> -->
+    <ng-container *transloco="let t; read: 'setup.currency'">
+      <app-add-item-button
+        [title]="t('addCurrency')"
+        [icon]="'add'"
+        (buttonCliked)="openCurrencyForm()"
+      >
+      </app-add-item-button>
+    </ng-container>
   </div>
   <div
     [formGroup]="tableFormGroup"
@@ -40,7 +48,7 @@
             [formControl]="tableSearch"
           />
           <span class="absolute top-1/2 left-2 -translate-y-1/2">
-            <i class="bi bi-search text-neutral-500"></i>
+            <mat-icon matPrefix class="mt-1">search</mat-icon>
           </span>
         </div>
       </div>
@@ -96,7 +104,7 @@
                       matTooltip="{{ t('edit') }}"
                     >
                       <span>
-                        <i class="bi bi-pen text-lg text-info"></i>
+                        <mat-icon matPrefix class="text-info">edit</mat-icon>
                       </span>
                     </button>
                     <button
@@ -108,7 +116,9 @@
                       matTooltip="{{ t('delete') }}"
                     >
                       <span>
-                        <i class="bi bi-trash text-lg text-danger-600"></i>
+                        <mat-icon matPrefix class="text-danger-600"
+                          >delete</mat-icon
+                        >
                       </span>
                     </button>
                   </div>
@@ -206,7 +216,7 @@
                         matTooltip="{{ t('edit') }}"
                       >
                         <span>
-                          <i class="bi bi-pen text-lg text-info"></i>
+                          <mat-icon matPrefix class="text-info">edit</mat-icon>
                         </span>
                       </button>
                       <button
@@ -218,7 +228,9 @@
                         matTooltip="{{ t('delete') }}"
                       >
                         <span>
-                          <i class="bi bi-trash text-lg text-danger-600"></i>
+                          <mat-icon matPrefix class="text-danger-600"
+                            >delete</mat-icon
+                          >
                         </span>
                       </button>
                     </div>
