--- a/JICHANGEAPI/ClientApp/src/app/pages/bank/setup/region-list/region-list.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/bank/setup/region-list/region-list.component.html
@@ -12,17 +12,14 @@
     >
       {{ t("region") }}
     </h2>
-    <button
-      (click)="openAddRegionDialog()"
-      class="flex flex-row items-center btn btn-sm bg-primary hover:bg-accent text-neutral-50 btn-ghost shadow"
-    >
-      <span>
-        <i class="bi bi-plus-circle text-xl"></i>
-      </span>
-      <p *transloco="let t; read: 'setup.regionDialog'" class="text-sm">
-        {{ t("addRegion") }}
-      </p>
-    </button>
+    <ng-container *transloco="let t; read: 'setup.regionDialog'">
+      <app-add-item-button
+        [title]="t('addRegion')"
+        [icon]="'add'"
+        (buttonCliked)="openAddRegionDialog()"
+      >
+      </app-add-item-button>
+    </ng-container>
   </div>
   <div
     [formGroup]="tableFormGroup"
@@ -40,7 +37,7 @@
             [formControl]="tableSearch"
           />
           <span class="absolute top-1/2 left-2 -translate-y-1/2">
-            <i class="bi bi-search text-neutral-500"></i>
+            <mat-icon matPrefix class="mt-1">search</mat-icon>
           </span>
         </div>
       </div>
@@ -96,7 +93,7 @@
                       matTooltip="{{ t('edit') }}"
                     >
                       <span>
-                        <i class="bi bi-pen text-lg text-info"></i>
+                        <mat-icon matPrefix class="text-info">edit</mat-icon>
                       </span>
                     </button>
                     <button
@@ -106,7 +103,9 @@
                       matTooltip="{{ t('delete') }}"
                     >
                       <span>
-                        <i class="bi bi-trash text-lg text-danger-600"></i>
+                        <mat-icon matPrefix class="text-danger-600"
+                          >delete</mat-icon
+                        >
                       </span>
                     </button>
                   </div>
@@ -204,7 +203,7 @@
                         matTooltip="{{ t('edit') }}"
                       >
                         <span>
-                          <i class="bi bi-pen text-lg text-info"></i>
+                          <mat-icon matPrefix class="text-info">edit</mat-icon>
                         </span>
                       </button>
                       <button
@@ -214,7 +213,9 @@
                         matTooltip="{{ t('delete') }}"
                       >
                         <span>
-                          <i class="bi bi-trash text-lg text-danger-600"></i>
+                          <mat-icon matPrefix class="text-danger-600"
+                            >delete</mat-icon
+                          >
                         </span>
                       </button>
                     </div>
