--- a/JICHANGEAPI/ClientApp/src/app/pages/bank/setup/smtp-list/smtp-list.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/pages/bank/setup/smtp-list/smtp-list.component.html
@@ -11,7 +11,7 @@
     >
       {{ t("smtp") }}
     </h2>
-    <button
+    <!-- <button
       (click)="openSmtpForm()"
       class="flex flex-row items-center btn btn-sm bg-primary hover:bg-accent text-neutral-50 btn-ghost shadow"
     >
@@ -21,7 +21,15 @@
       <p *transloco="let t; read: 'setup.smtp'" class="text-sm">
         {{ t("addSmtp") }}
       </p>
-    </button>
+    </button> -->
+    <ng-container *transloco="let t; read: 'setup.smtp'">
+      <app-add-item-button
+        [title]="t('addSmtp')"
+        [icon]="'add'"
+        (buttonCliked)="openSmtpForm()"
+      >
+      </app-add-item-button>
+    </ng-container>
   </div>
   <div
     [formGroup]="tableHeadersFormGroup"
@@ -36,11 +44,8 @@
             class="btn btn-sm tracking-wide bg-white shadow rounded-lg m-1"
           >
             <span>
-              <i class="bi bi-layout-three-columns text-sm"></i>
+              <mat-icon class="text-lg mb-0.5" matPrefix>table_chart</mat-icon>
             </span>
-            <p *transloco="let t; read: 'defaults'" class="text-xs">
-              {{ t("columns") }}
-            </p>
           </button>
           <ul
             tabindex="0"
@@ -72,7 +77,7 @@
             [formControl]="tableSearch"
           />
           <span class="absolute top-1/2 left-2 -translate-y-1/2">
-            <i class="bi bi-search text-neutral-500"></i>
+            <mat-icon matPrefix class="mt-1">search</mat-icon>
           </span>
         </div>
       </div>
@@ -128,7 +133,7 @@
                       matTooltip="{{ t('edit') }}"
                     >
                       <span>
-                        <i class="bi bi-pen text-lg text-info"></i>
+                        <mat-icon matPrefix class="text-info">edit</mat-icon>
                       </span>
                     </button>
                     <button
@@ -138,7 +143,9 @@
                       matTooltip="{{ t('delete') }}"
                     >
                       <span>
-                        <i class="bi bi-trash text-lg text-danger-600"></i>
+                        <mat-icon matPrefix class="text-danger-600"
+                          >delete</mat-icon
+                        >
                       </span>
                     </button>
                   </div>
@@ -232,11 +239,11 @@
                       <button
                         *transloco="let t; read: 'actions'"
                         (click)="openEditSmtpForm(element)"
-                        class="btn btn-sm btn-ghost border"
+                        class="btn btn-sm btn-ghost border border-info"
                         matTooltip="{{ t('edit') }}"
                       >
                         <span>
-                          <i class="bi bi-pen text-lg text-info"></i>
+                          <mat-icon matPrefix class="text-info">edit</mat-icon>
                         </span>
                       </button>
                       <button
@@ -246,7 +253,9 @@
                         matTooltip="{{ t('delete') }}"
                       >
                         <span>
-                          <i class="bi bi-trash text-lg text-danger-600"></i>
+                          <mat-icon matPrefix class="text-danger-600"
+                            >delete</mat-icon
+                          >
                         </span>
                       </button>
                     </div>
