--- a/JICHANGEAPI/ClientApp/src/app/components/dialogs/popup-message-dialog/popup-message-dialog.component.html
+++ b/JICHANGEAPI/ClientApp/src/app/components/dialogs/popup-message-dialog/popup-message-dialog.component.html
@@ -8,7 +8,7 @@
       </h6>
     </div>
     <div>
-      <h6 class="mat-body-small">
+      <h6 class="mat-body-small text-[var(--mat-sys-on-surface)]">
         {{ data.message }}
       </h6>
       <button
@@ -31,7 +31,7 @@
       </h6>
     </div>
     <div>
-      <h6 class="mat-body-small">
+      <h6 class="mat-body-small text-[var(--mat-sys-on-surface)]">
         {{ data.message }}
       </h6>
       <button
